# aicommits-rs

./: Cargo.toml  README.MD
src/: config.rs  main.rs
