[package]
name = "aicommits-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.25", features = ["json", "rustls-tls"] }
tokio = {version = "1.48.0", features = ["full"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
anyhow = "1.0.100"
clap = {version = "4.5.53", features = ["derive"]}
dialoguer = "0.12.0"
directories = "6.0.0"
toml = "0.9.8"